# MIEIC_AEDA

PDFs/: 10_listas.ppt
TP Classes/TP1/: main.cpp
TP Classes/TP1/Tests/: parque.cpp  tests.cpp
TP Classes/TP10/aeda1920_fp10/Tests/: caixa.cpp  maquinaEmpacotar.cpp
TP Classes/TP2/TP2EXTRA/aeda1920_fp02_extra/Tests/: animal.cpp  animal.h  veterinario.cpp  veterinario.h  zoo.cpp  zoo.h
TP Classes/TP2/aeda1920_fp02/: CMakeLists.txt
TP Classes/TP2/aeda1920_fp02/Tests/: frota.cpp  frota.h  tests.cpp  veiculo.cpp  veiculo.h
TP Classes/TP3/Tests/: grafo.h
TP Classes/TP4/aeda1920_fp04/Tests/: parque.cpp  parque.h  tests.cpp
TP Classes/TP5/aeda1920_fp05/: main.cpp
TP Classes/TP5/aeda1920_fp05/Tests/: crianca.cpp  crianca.h  jogo.cpp  jogo.h  tests.cpp
TP Classes/TP6/aeda1920_fp06/Tests/: balcao.cpp  balcao.h  stackExt.h  tests.cpp
TP Classes/TP7/aeda1920_fp07/Tests/: dicionario.cpp  dicionario.h  tests.cpp
TP Classes/TP9/aeda1920_fp09/Tests/: aposta.cpp  aposta.h  jogador.cpp  jogador.h
